--- a/src/frontend/static/css/styles.css
+++ b/src/frontend/static/css/styles.css
@@ -1,10 +1,37 @@
-
 body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
 
 main {
-    flex: 1 0 auto;
+  flex: 1 0 auto;
+}
+
+.edit_dev {
+  color: black;
+}
+
+.delete_dev {
+  color: #f44336;
+}
+
+.btn-cancel {
+  border: 1px solid #f44336;
+  border-radius: 2px;
+}
+
+.btn-save {
+  border: 1px solid rgba(76, 175, 80, 0.7);
+  border-radius: 2px;
+}
+
+.toast-success {
+  background-color: rgba(76, 175, 80, 0.7);
+  color: white;
+}
+
+.toast-failure {
+  background-color: #f44336;
+  color: white;
 }
